# oop

./: README.md
DairyManagementSystem/: CMakeLists.txt  test_input.txt
DairyManagementSystem/data/: employees.csv  milk_batches.csv  production.csv  products.csv  sales.csv  suppliers.csv
DairyManagementSystem/include/: DairyManagementSystem.hpp  DairyProduct.hpp  Employee.hpp  Inventory.hpp  MilkBatch.hpp  Person.hpp  ProductionBatch.hpp  QualityTest.hpp  SalesOrder.hpp  Supplier.hpp
DairyManagementSystem/src/: DairyManagementSystem.cpp  DairyProduct.cpp  Employee.cpp  Inventory.cpp  MilkBatch.cpp  Person.cpp  ProductionBatch.cpp  QualityTest.cpp  SalesOrder.cpp  Supplier.cpp  main.cpp
